Fix menu button placement on tablet and desktop

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -75,6 +75,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 @media only screen and (min-width: 768px) {
   .bm-burger-button {
+    margin: 0.5em;
     width: 54px;
   }
 }
